--- a/server/package.json
+++ b/server/package.json
@@ -7,8 +7,10 @@
     "start": "nodemon src/index"
   },
   "dependencies": {
+    "apollo-datasource-rest": "^3.5.2",
     "apollo-server": "^3.6.7",
-    "graphql": "^16.3.0"
+    "graphql": "^16.3.0",
+    "node-fetch": "^3.2.3"
   },
   "devDependencies": {
     "dotenv": "^8.2.0",
