--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,8 @@
   "description": "back-end demo app for Apollo's lift-off course",
   "main": "src/index.js",
   "scripts": {
-    "start": "nodemon src/index"
+    "start": "node src/index",
+    "dev": "nodemon src/index"
   },
   "dependencies": {
     "apollo-datasource-rest": "^3.5.2",
@@ -13,7 +14,7 @@
     "node-fetch": "^3.2.3"
   },
   "devDependencies": {
-    "dotenv": "^8.2.0",
+    "dotenv": "^16.0.0",
     "nodemon": "^2.0.4"
   },
   "author": "Raphael Terrier @R4ph-t",
